[gd_scene load_steps=6 format=3 uid="uid://bfbv7nhwegofl"]

[ext_resource type="Script" path="res://checker_piece.gd" id="1_yqcea"]
[ext_resource type="AudioStream" uid="uid://ouvi1c1o1rp1" path="res://soundFX/place_piece.mp3" id="2_o0p8h"]
[ext_resource type="AudioStream" uid="uid://bsny8shksui74" path="res://soundFX/click_piece.mp3" id="3_qpliu"]

[sub_resource type="CylinderMesh" id="CylinderMesh_pfi3p"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7wv47"]
height = 0.2
radius = 0.4

[node name="checker_piece" type="StaticBody3D"]
script = ExtResource("1_yqcea")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_pfi3p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_7wv47")

[node name="placePieceStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_o0p8h")

[node name="clickPieceStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qpliu")
